# crust-one

./: README.md  setup.cfg
examples/: as_nd.py  load_data.py  vpvs_range.py
src/crustone/: __init__.py  crust2_profile.py  parse_data.py  profile.py
tests/: load_data.py
