[metadata]
name = crustone
version = 0.0.3
author = Philip Crotwell
author_email = crotwell@seis.sc.edu
description = Read Crust1.0 model in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crotwell/crust-one
project_urls =
    Bug Tracker = https://github.com/crotwell/crust-one/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
crustone =
    data/crust1.*
    data/crust2/CN*.txt
